--- a/web/public/index.html
+++ b/web/public/index.html
@@ -11,5 +11,13 @@
     </head>
     <body>
         <div id="app"></div>
+        <!-- <script src="https://cdn.bootcss.com/vue/2.6.10/vue.min.js"></script>
+        <script src="https://cdn.bootcss.com/axios/0.19.0/axios.min.js"></script>
+        <script src="https://cdn.bootcss.com/vuex/3.1.1/vuex.min.js"></script>
+        <script src="https://cdn.bootcss.com/vue-router/3.1.3/vue-router.min.js"></script>
+        <script src="https://cdn.bootcss.com/lodash.js/4.17.15/lodash.min.js"></script>
+        <script src="https://cdn.bootcss.com/highlight.js/9.15.10/highlight.min.js"></script>
+        <script src="https://cdn.bootcss.com/marked/0.7.0/marked.min.js"></script> -->
+        
     </body>
 </html>
