--- a/web/public/index.html
+++ b/web/public/index.html
@@ -8,6 +8,7 @@
             content="width=device-width,initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
         />
         <title>Aaron's Blog</title>
+        <!-- <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css"> -->
     </head>
     <body>
         <div id="app"></div>
@@ -17,7 +18,8 @@
         <script src="https://cdn.bootcss.com/vue-router/3.1.3/vue-router.min.js"></script>
         <script src="https://cdn.bootcss.com/lodash.js/4.17.15/lodash.min.js"></script>
         <script src="https://cdn.bootcss.com/highlight.js/9.15.10/highlight.min.js"></script>
-        <script src="https://cdn.bootcss.com/marked/0.7.0/marked.min.js"></script> -->
+        <script src="https://cdn.bootcss.com/marked/0.7.0/marked.min.js"></script>
+        <script src="https://unpkg.com/element-ui/lib/index.js"></script> -->
         
     </body>
 </html>
